--- a/06_Paper/ER-ED/report.Rmd
+++ b/06_Paper/ER-ED/report.Rmd
@@ -39,7 +39,7 @@ author:
       - Formal analysis
       - Writing - review & editing
   - name          : "Alexander Strobel"
-    orcid         :
+    orcid         : "0000-0002-9426-5397"
     affiliation   : "1"
     role          :
       - Conceptualization
