--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -3,7 +3,16 @@ title: "intro"
 author: "Christoph Scheffel"
 output: html_document
 ---
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(echo = FALSE)
 
+library(targets)    # to keep track of all relevant files
+library(here)       # to set directories without defined paths
+library(papaja)     # APA conform output
+
+# set top level directory to source file
+here::i_am("flag_project_root_CERED.txt")
+```
 # 1. Introduction
 
 Every day we are confronted with stressful or emotionally demanding situations. 
@@ -51,7 +60,7 @@ To investigate this question, the individual subjective values of each strategy 
 Promising approaches can be found in studies on difficulty levels of effortful cognitive tasks.  
 Individual subjective values (SV) of effortful cognitive tasks have been quantified using the cognitive effort discounting paradigm (COG-ED) [@Westbrook2013]. 
 
-## 1.1 ER strategies discounting
+## 1.1 ER strategy discounting
 
 In the original study by Westbrook et al. [-@Westbrook2013], cognitive load was varied using the *n*-back task, a working memory task that requires fast and accurate responses to sequentially presented stimuli. 
 Participants had to decide whether they wanted to repeat a higher *n*-back level for a larger, fixed monetary reward, or a lower level for a smaller, varying reward. 
