--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -4,7 +4,7 @@ bibliography: ER_ED.bib
 csl: apa7.csl
 ---
 
-```{r setup, include = FALSE}
+```{r SetupMethod, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
 library(targets)    # to keep track of all relevant files
@@ -376,7 +376,7 @@ Attentional control was assessed using the Attentional Control Scale (ACS) [@Der
 
 ## 2.7 Statistics 
 
-All statistical analyses were perfomed using *RStudio* (version 1.4.1717) [@RStudioTeam2020]and *R* (version 4.1.0) [@RCore2020] for Windows.
+All statistical analyses were perfomed using *RStudio* (version 1.4.1717) [@RStudioTeam2020]and *R* (version 4.1.0) [@RCore2021] for Windows.
 The level of significance was set to $\alpha$ = .05.
 
 *Effects of emotion regulation on arousal and effort* <br>
