corrected file names

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -89,8 +89,8 @@ header-includes   :
 \setcounter{figure}{0}
 ---
 
-``` {r child = "intro.Rmd"}
+``` {r child = "TheoreticalBackground.Rmd"}
 ```
 
-```{r child = "method.Rmd"}
+```{r child = "Method.Rmd"}
 ```
