--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -256,15 +256,16 @@ According to the 21-word-solution, "We report how we determined our sample size,
 A complete list of all measures assessed in the study will be found at the OSF (https://osf.io/vnj8x/) and GitHub (github.com/ChScheffel/COG-ER-ED). <!-- Attention! OSF is still private -->
 All procedures performed in this study were in accordance with the ethical standards of the institutional and/or national research committee and with the 1964 Helsinki declaration and its later amendments or comparable ethical standards.
 
-## 2.1 Sampling plan
+## 2.1 Ethics information
 
-Participants will be healthy adults in the age of 18 to 30, recruited using the software *ORSEE* [@Greiner2015] at the Technische Universität Dresden. 
-Participants will be excluded from participation if they do not fluently speak German, have current or a history of psychological disorders or neurological trauma, or report to take medication.
-We will use all available data in subsequent analyses.
-However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
+## 2.2 Pilot data
 
-## 2.2 Experimental procedure
+The procedure described above was tested in a pilot study with ...
 
+## 2.3 Design
+
+Young, healthy participants (aged 18 to 30 years) will be recruited using the software *ORSEE* [@Greiner2015].
+Participants will be invited to fill out an online survey containing different questionnaires to assess broad and narrow personality traits and measures of well-being.
 The study consisted of two sessions, one week apart. 
 Both sessions took place in a shielded cabin with constant lighting. 
 Before each session, participants received information about the respective experimental procedure and signed informed consent. 
@@ -277,12 +278,6 @@ Afterwards the ER paradigm was conducted.
 Participants first received written instructions on the ER paradigm and ER strategies that they should apply.
 A training session was performed to ensure that all participants were able to implement the ER strategies.
 Next, electrodes to measure EMG were attached and the ER paradigm was conducted. 
-Two days after the secon sessoin, participants received a link to an online survey containing different questionnaires to assess broad and narrow personality traits and measures of well-being.
-
-Participants received 8.00€ per hour or course credit as compensation for participation.
-Study data were collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
-
-## 2.3 Emotion regulation paradigm 
 
 The ER paradigm roughly consisted of three parts that will be described in the following.
 
@@ -321,6 +316,17 @@ Participants should make their decision freely, according to the criteria they c
 However, participants were asked to state the reasons for the decision afterwards.
 As soon as they had decided, they saw the respective instruction. 
 After, the block with another 20 negative pictures started.
+
+
+Participants received 30.00€ or course credit as compensation for participation.
+Study data were collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
+
+## 2.4 Sampling plan
+
+Participants will be healthy adults in the age of 18 to 30, recruited using the software *ORSEE* [@Greiner2015] at the Technische Universität Dresden. 
+Participants will be excluded from participation if they do not fluently speak German, have current or a history of psychological disorders or neurological trauma, or report to take medication.
+We will use all available data in subsequent analyses.
+However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
 
 ## 2.4 Stimuli
 
@@ -372,7 +378,6 @@ For each ER strategy, SVs were calculated as follows: first, the value 0.015625 
 Second, the resulting (monetary) value was divided by 2.00 €.
 The resulting values were entered in a rmANOVA to compare the SVs of the three strategies (distraction, distancing, and suppression).
 
-## 2.8 Pilot study
 
-The procedure described above was tested in a pilot study with 
+
 
