--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -544,4 +544,17 @@ http://www.tandfonline.com/doi/pdf/10.1080/10615806.2012.734810?needAccess=true}
   year      = {2010},
 }
 
+@article{Zaehringer2020,
+   author = {Zaehringer, J. and Jennen-Steinmetz, C. and Schmahl, C. and Ende, G. and Paret, C.},
+   title = {Psychophysiological Effects of Downregulating Negative Emotions: Insights From a Meta-Analysis of Healthy Adults},
+   journal = {Front Psychol},
+   volume = {11},
+   pages = {470},
+   ISSN = {1664-1078 (Print)
+1664-1078 (Linking)},
+   DOI = {10.3389/fpsyg.2020.00470},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/32372993
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177019/pdf/fpsyg-11-00470.pdf},
+   year = {2020}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
