--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -355,13 +355,17 @@ Afterwards, the signals were rectified.
 
 Participants will be healthy adults in the age of 18 to 30, recruited using the software *ORSEE* [@Greiner2015] at the Technische Universität Dresden. 
 Participants will be excluded from participation if they do not fluently speak German, have current or a history of psychological disorders or neurological trauma, or report to take medication.
-Sample size calculation with _G*Power_ [@Faul2007; @Faul2009]
+Sample size calculation was done using _G*Power_ [@Faul2007; @Faul2009].
+In a meta-analysis of Zaehringer and colleagues [-@Zaehringer2020], effect sizes of ER on peripheral-physiological measures were reported.  
+To find an effect of $d=-0.32$ of ER on *corrugator* muscle activity with $\alpha=.05$ and $\beta=.95$, data of least $N=85$ have to be analyzed.
+Power analyses of all other hypotheses yielded smaller sample sizes.
 However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
+Therefore, we aim to collect data of 90 participants.
 
-## 2.7 Statistics 
+## 2.5 Analysis plan 
 
 All statistical analyses were perfomed using *RStudio* (version 1.4.1717) [@RStudioTeam2020]and *R* (version 4.1.0) [@RCore2021] for Windows.
-The level of significance was set to $\alpha$ = .05.
+The level of significance was set to $\alpha=.05$.
 
 *Effects of emotion regulation on arousal and effort* <br>
 To examine impact of valence of emotional pictures on subjective arousal, an repeated measures analysis of variance (rmANOVA) with the factor valence (neutral and negative) for strategy active viewing was conducted for behavioral data (subjective arousal ratings).
@@ -377,6 +381,48 @@ For each ER strategy, SVs were calculated as follows: first, the value 0.015625 
 Second, the resulting (monetary) value was divided by 2.00 €.
 The resulting values were entered in a rmANOVA to compare the SVs of the three strategies (distraction, distancing, and suppression).
 
+## Data availability
+
+The data of this study can be downloaded from [osf.io/vnj8x/](https://osf.io/vnj8x/).
+
+## Code availability
+
+The paradigm code, as well as the R Markdown file used to analyze the data and write this document is available at our [Github repository](https://github.com/ChScheffel/CERED).
+
+\newpage
+
+# References
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+<div id="refs" custom-style="Bibliography"></div>
+\endgroup
+
+\newpage
+
+# Acknowledgements
+
+This research is partly funded by the German Research Foundation (DFG) as part of the Collaborative Research Center (CRC) 940.
+Additionally, we have applied for funding of the participants' compensation from centralized funds of the Faculty of Psychology at Technische Universität Dresden.
+Applications for the centralized funds will be reviewed in May.
+Regardless of whether or not this additional funding will be granted, the study can commence immediately.
+The funders have/had no role in study design, data collection and analysis, decision to publish or preparation of the manuscript.
+
+
+# Author Contributions
+
+CS, AS, and JZ conceptualized the study and its methodology.
+CS and JZ acquired funding, investigated, administered the project, and wrote the software.
+CS, JZ, and AG did the formal analysis.
+CS and JZ visualized the results, and prepared the original draft.
+All authors reviewed, edited, and approved the final version of the manuscript.
+
+
+# Competing Interests
+
+The authors declare no competing interests.
 
 
 
