--- a/06_Paper/COG-ED/CERED.bib
+++ b/06_Paper/COG-ED/CERED.bib
@@ -686,4 +686,141 @@
   url    = {https://CRAN.R-project.org/package=BayesFactor},
 }
 
+@Article{Cocker2012,
+  author    = {Cocker, Paul J. and Hosking, Jay G. and Benoit, James and Winstanley, Catharine A.},
+  journal   = {Neuropsychopharmacology},
+  title     = {Sensitivity to cognitive effort mediates psychostimulant effects on a novel rodent cost/benefit decision-making task},
+  year      = {2012},
+  month     = {mar},
+  number    = {8},
+  pages     = {1825--1837},
+  volume    = {37},
+  doi       = {10.1038/npp.2012.30},
+  groups    = {CERED},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
+@Article{Diers2021,
+  author    = {Kersten Diers and Denise Dörfel and Anne Gärtner and Sabine Schönfeld and Henrik Walter and Alexander Strobel and Burkhard Brocke},
+  journal   = {{PLOS} {ONE}},
+  title     = {Should we keep some distance from distancing? Regulatory and post-regulatory effects of emotion downregulation},
+  year      = {2021},
+  month     = {sep},
+  number    = {9},
+  pages     = {e0255800},
+  volume    = {16},
+  doi       = {10.1371/journal.pone.0255800},
+  editor    = {Ilona Papousek},
+  groups    = {CERED},
+  publisher = {Public Library of Science ({PLoS})},
+}
+
+@Article{Gross1998a,
+  author     = {Gross, J. J.},
+  journal    = {Journal of Personality and Social Psychology},
+  title      = {Antecedent- and response-focused emotion regulation: {Divergent} consequences for experience, expression, and physiology},
+  year       = {1998},
+  issn       = {0022-3514},
+  month      = jan,
+  note       = {Number: 1},
+  number     = {1},
+  pages      = {224--237},
+  volume     = {74},
+  abstract   = {Using a process model of emotion, a distinction between antecedent-focused and response-focused emotion regulation is proposed. To test this distinction, 120 participants were shown a disgusting film while their experiential, behavioral, and physiological responses were recorded. Participants were told to either (a) think about the film in such a way that they would feel nothing (reappraisal, a form of antecedent-focused emotion regulation), (b) behave in such a way that someone watching them would not know they were feeling anything (suppression, a form of response-focused emotion regulation), or (c) watch the film (a control condition). Compared with the control condition, both reappraisal and suppression were effective in reducing emotion-expressive behavior. However, reappraisal decreased disgust experience, whereas suppression increased sympathetic activation. These results suggest that these 2 emotion regulatory processes may have different adaptive consequences.},
+  doi        = {10.1037//0022-3514.74.1.224},
+  groups     = {CERED},
+  keywords   = {Adult, Female, Humans, Male, Cognition, Health Status, Affect, Adaptation, Psychological, Mental Health, Life Change Events},
+  language   = {eng},
+  pmid       = {9457784},
+  shorttitle = {Antecedent- and response-focused emotion regulation},
+}
+
+@Article{Kinner2017,
+  author    = {Valerie L. Kinner and Lars Kuchinke and Angelika M. Dierolf and Christian J. Merz and Tobias Otto and Oliver T. Wolf},
+  journal   = {Psychophysiology},
+  title     = {What our eyes tell us about feelings: Tracking pupillary responses during emotion regulation processes},
+  year      = {2017},
+  month     = {jan},
+  number    = {4},
+  pages     = {508--518},
+  volume    = {54},
+  doi       = {10.1111/psyp.12816},
+  groups    = {CERED},
+  publisher = {Wiley},
+}
+
+@Article{Kool2010,
+  author    = {Wouter Kool and Joseph T. McGuire and Zev B. Rosen and Matthew M. Botvinick},
+  journal   = {Journal of Experimental Psychology: General},
+  title     = {Decision making and the avoidance of cognitive demand.},
+  year      = {2010},
+  number    = {4},
+  pages     = {665--682},
+  volume    = {139},
+  doi       = {10.1037/a0020198},
+  groups    = {CERED},
+  publisher = {American Psychological Association ({APA})},
+}
+
+@Article{Scheffel2019b,
+  author     = {Scheffel, Christoph and Diers, Kersten and Schönfeld, Sabine and Brocke, Burkhard and Strobel, Alexander and Dörfel, Denise},
+  journal    = {Personality Neuroscience},
+  title      = {Cognitive emotion regulation and personality: {An} analysis of individual differences in the neural and behavioral correlates of successful reappraisal},
+  year       = {2019},
+  issn       = {2513-9886},
+  note       = {Publisher: Cambridge University Press},
+  volume     = {2},
+  abstract   = {A common and mostly effective emotion regulation strategy is reappraisal. During reappraisal, activity in cognitive control brain regions increases and activity in brain regions associated with emotion responding (e.g., the amygdala) diminishes. Immediately after reappraisal, it has been observed that activity in the amygdala increases again, which might reflect a paradoxical aftereffect. While there is extensive empirical evidence for these neural correlates of emotion regulation, only few studies targeted the association with individual differences in personality traits. The aim of this study is to investigate these associations more thoroughly. Seventy-six healthy participants completed measures of broad personality traits (Big Five, Positive and Negative Affect) as well as of more narrow traits (habitual use of emotion regulation) and performed an experimental fMRI reappraisal task. Participants were instructed to either permit their emotions or to detach themselves from the presented negative and neutral pictures. After each picture, a relaxation period was included. Reappraisal success was determined by arousal ratings and activity in the amygdala. During reappraisal, we found activation in the prefrontal cortex and deactivation in the left amygdala. During the relaxation period, an immediate aftereffect was found in occipital regions and marginally in the amygdala. Neither personality traits nor habitual use of emotion regulation predicted reappraisal success or the magnitude of the aftereffect. We replicated typical activation and deactivation patterns during intentional emotion regulation and partially replicated the immediate aftereffect in the amygdala. However, there was no association between personality traits and emotion regulation success.},
+  doi        = {10.1017/pen.2019.11},
+  file       = {Full Text PDF:C\:/Users/josep/Zotero/storage/R5YZFD34/scheffel_cognitive_2019 - Cognitive Emotion Regulation and Personality_ an Analysis of Individual Differences in the Neural and Behavioral Correlates of Successful Reappraisal.pdf:application/pdf;Snapshot:C\:/Users/josep/Zotero/storage/REQC3CDV/scheffel_cognitive_2019 - Cognitive Emotion Regulation and Personality_ an Analysis of Individual Differences in the Neural and Behavioral Correlates of Successful Reappraisal.html:text/html},
+  groups     = {CERED},
+  keywords   = {personality, emotion regulation, reappraisal, fMRI, amygdala},
+  language   = {en},
+  shorttitle = {Cognitive emotion regulation and personality},
+  url        = {https://www.cambridge.org/core/journals/personality-neuroscience/article/cognitive-emotion-regulation-and-personality-an-analysis-of-individual-differences-in-the-neural-and-behavioral-correlates-of-successful-reappraisal/0E2C6F9FD69D71BAD2EF89423E194D25},
+  urldate    = {2021-02-02},
+}
+
+@Article{Strobel2020,
+  author     = {Strobel, Alexander and Wieder, Gesine and Paulus, Philipp C. and Ott, Florian and Pannasch, Sebastian and Kiebel, Stefan J. and Kührt, Corinna},
+  journal    = {PLOS ONE},
+  title      = {Dispositional cognitive effort investment and behavioral demand avoidance: {Are} they related?},
+  year       = {2020},
+  issn       = {1932-6203},
+  month      = oct,
+  note       = {Publisher: Public Library of Science},
+  number     = {10},
+  pages      = {e0239817},
+  volume     = {15},
+  abstract   = {Individuals tend to avoid cognitive demand, yet, individual differences appear to exist. Recent evidence from two studies suggests that individuals high in the personality traits Self-Control and Need for Cognition that are related to the broader construct Cognitive Effort Investment are less prone to avoid cognitive demand and show less effort discounting. These findings suggest that cost-benefit models of decision-making that integrate the costs due to effort should consider individual differences in the willingness to exert mental effort. However, to date, there are almost no replication attempts of the above findings. For the present conceptual replication, we concentrated on the avoidance of cognitive demand and used a longitudinal design and latent state-trait modeling. This approach enabled us to separate the trait-specific variance in our measures of Cognitive Effort Investment and Demand Avoidance that is due to stable, individual differences from the variance that is due to the measurement occasion, the methods used, and measurement error. Doing so allowed us to test the assumption that self-reported Cognitive Effort Investment is related to behavioral Demand Avoidance more directly by relating their trait-like features to each other. In a sample of N = 217 participants, we observed both self-reported Cognitive Effort Investment and behavioral Demand Avoidance to exhibit considerable portions of trait variance. However, these trait variances were not significantly related to each other. Thus, our results call into question previous findings of a relationship between self-reported effort investment and demand avoidance. We suggest that novel paradigms are needed to emulate real-world effortful situations and enable better mapping between self-reported measures and behavioral markers of the willingness to exert cognitive effort.},
+  doi        = {10.1371/journal.pone.0239817},
+  file       = {Full Text PDF:C\:/Users/josep/Zotero/storage/FFAQDW2F/strobel_dispositional_2020 - Dispositional Cognitive Effort Investment and Behavioral Demand Avoidance_ Are They Related_.pdf:application/pdf;Snapshot:C\:/Users/josep/Zotero/storage/2H465PAX/strobel_dispositional_2020 - Dispositional Cognitive Effort Investment and Behavioral Demand Avoidance_ Are They Related_.html:text/html},
+  groups     = {CERED},
+  keywords   = {Personality, Cognition, Behavior, Personality traits, Decision making, Working memory, Personality disorders, Personality tests},
+  language   = {en},
+  shorttitle = {Dispositional cognitive effort investment and behavioral demand avoidance},
+  url        = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0239817},
+  urldate    = {2021-07-14},
+}
+
+@Article{Scheffel2021,
+  author     = {Scheffel, Christoph and Graupner, Sven-Thomas and Gärtner, Anne and Zerna, Josephine and Strobel, Alexander and Dörfel, Denise},
+  journal    = {Psychophysiology},
+  title      = {Effort beats effectiveness in emotion regulation choice: {Differences} between suppression and distancing in subjective and physiological measures},
+  year       = {2021},
+  issn       = {1469-8986},
+  number     = {n/a},
+  pages      = {e13908},
+  volume     = {n/a},
+  abstract   = {Emotion regulation (ER) can be implemented by different strategies which differ in their capacity to alter emotional responding. What all strategies have in common is that cognitive control must be exercised in order to implement them. The aim of the present preregistered study was to investigate whether the two ER strategies, expressive suppression and distancing, require different amounts of cognitive effort and whether effort is associated with personality traits. Effort was assessed subjectively via ratings and objectively via pupillometry and heart period. In two studies, N = 110 and N = 52 healthy adults conducted an ER paradigm. Participants used suppression and distancing during inspection of positive and negative pictures. They also had the choice to reapply either of the strategies at the end of the paradigm. Although distancing was more effective in downregulation of subjective arousal (Study 1: p {\textless} .001, = .20; Study 2: p {\textless} .001, = .207), about two thirds reapplied suppression, because it was perceived as less effortful. Effort was rated significantly lower for suppression compared to distancing (Study 1: p = .042, = .04; Study 2: p = .002, = .13). However, differences in effort were not reflected in pupillary data or heart period. Broad and narrow personality traits were neither associated with the preferred strategy nor with subjective or physiological effort measures. Findings suggest that people tend to use the ER strategy that is perceived as less effortful, even though it might not be the most effective strategy.},
+  doi        = {10.1111/psyp.13908},
+  file       = {:Scheffel - Effort Beats Effectiveness in Emotion Regulation Choice_ Differences between Suppression and Distancing in Subjective and Physiological Measures.pdf:PDF},
+  groups     = {CERED},
+  keywords   = {distancing, effort, emotion regulation, expressive suppression, heart rate, pupillometry},
+  language   = {en},
+  shorttitle = {Effort beats effectiveness in emotion regulation choice},
+  url        = {https://onlinelibrary.wiley.com/doi/abs/10.1111/psyp.13908},
+  urldate    = {2021-08-02},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
