--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -94,3 +94,39 @@ header-includes   :
 
 ```{r child = "Method.Rmd"}
 ```
+
+# References
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+<div id="refs" custom-style="Bibliography"></div>
+\endgroup
+
+\newpage
+
+# Acknowledgements
+
+This research is partly funded by the German Research Foundation (DFG) as part of the Collaborative Research Center (CRC) 940.
+Additionally, we have applied for funding of the participants' compensation from centralized funds of the Faculty of Psychology at Technische Universität Dresden.
+Applications for the centralized funds will be reviewed in May.
+Regardless of whether or not this additional funding will be granted, the study can commence immediately.
+The funders have/had no role in study design, data collection and analysis, decision to publish or preparation of the manuscript.
+
+
+# Author Contributions
+
+CS, AS, and JZ conceptualized the study and its methodology.
+CS and JZ acquired funding, investigated, administered the project, and wrote the software.
+CS, JZ, and AG did the formal analysis.
+CS and JZ visualized the results, and prepared the original draft.
+All authors reviewed, edited, and approved the final version of the manuscript.
+
+
+# Competing Interests
+
+The authors declare no competing interests.
+
+
+
