--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -312,6 +312,18 @@ https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
    year = {2011},
 }
 
+@Article{Kuznetsova2017,
+   title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
+   author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B.
+     Christensen},
+   journal = {Journal of Statistical Software},
+   year = {2017},
+   volume = {82},
+   number = {13},
+   pages = {1--26},
+   doi = {10.18637/jss.v082.i13},
+ }
+
 @Book{Lang2008,
   author    = {Lang, P. J. and Bradley, M. M. and Cuthbert, B. N.},
   publisher = {University of Florida},
