--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -163,6 +163,19 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
    year = {2019},
 }
 
+@Article{Enders2007,
+  author    = {Craig K. Enders and Davood Tofighi},
+  journal   = {Psychological Methods},
+  title     = {Centering predictor variables in cross-sectional multilevel models: {A} new look at an old issue.},
+  year      = {2007},
+  number    = {2},
+  pages     = {121--138},
+  volume    = {12},
+  doi       = {10.1037/1082-989x.12.2.121},
+  groups    = {CERED},
+  publisher = {American Psychological Association ({APA})},
+}
+
 @Article{Faul2009,
   author     = {Faul, F. and Erdfelder, E. and Buchner, A. and Lang, A.-G.},
   journal    = {Behavior Research Methods},
