--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -399,7 +399,8 @@ The influence of personality traits on SVs will be investigated exploratorily.
 Therefore, the MLM specified above will be extended by the level-2-predictors NFC and self-control. <!--CS: Weitere Persönlichkeitsfaktoren ins Modell? Würde sagen erstmal nicht, denn sonst wird es a) überladen mit Prädiktoren und b) haben wir sonst kein Maß, was meiner Meinung nach mit ALLEN SVs zusammenhängen sollte. -->
 
 The association between flexible ER and SVs of ER strategies will be investigated with a regression using the $intercept$ and $slope$ of each participants' SVs to predict threi FlexER score.
-Therefore, SVs will be ordered by magnitude.  
+Therefore, SVs will be ordered by magnitude firstly. 
+Secondly, for each participant a linear model will be built to estimate the individual $intercept$ and $slope$. <!--CS: Reicht das so als Beschreibung und wird klar, woher die Slopes und Intercepts kommen werden? --> 
 
 For each result of the analyses both, $p$-values and Bayes factor $BF10$, calculated using the *BayesFactor* package [@Morey2021], will be reported.
 
