--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -325,6 +325,30 @@ https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
    year = {2011},
 }
 
+@book{Hull1943,
+   author = {Hull, C. L.},
+   title = {Principles of behavior: An introduction to behavior theory},
+   publisher = {Appleton-Century-Crofts},
+   address = {New York},
+   year = {1943},
+   type = {Book}
+}
+
+@article{Inzlicht2018,
+   author = {Inzlicht, M. and Shenhav, A. and Olivola, C. Y.},
+   title = {The Effort Paradox: Effort Is Both Costly and Valued},
+   journal = {Trends Cogn Sci},
+   volume = {22},
+   number = {4},
+   pages = {337-349},
+   ISSN = {1879-307X (Electronic)
+1364-6613 (Linking)},
+   DOI = {10.1016/j.tics.2018.01.007},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/29477776
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6172040/pdf/nihms-989921.pdf},
+   year = {2018}
+}
+
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
    author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B.
