--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -34,7 +34,7 @@ Especially suppression is generally associated with poorer outcomes (i.e., more 
 For example, it could be shown that maladaptive ER strategies mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
 Also, meta-analytic evidence exists linking a number of ER strategies to psychological disorders [@Aldao2010].
 
-
+<!--CS: Mit dem Teil bin ich noch nciht ganz zufrieden, freue mich über Anmerkungen, wie man das evtl. strukturieren kann! -->
 The postulation of *adaptive* and *maladaptive* strategies was put in a new perspective with the concept of ER flexibility.
 Similar to other psychological domains, e.g., attention and goal pursuit, *maladaptive* now refers to inflexible strategy use or use of strategies that are hindering in the achievement of goals [@Aldao2015].
 First, adaptive flexible ER requires having a large repertoire of ER strategies [@Aldao2015]. 
@@ -45,18 +45,27 @@ For example, it was shown that the intensity of a stimulus or situation plays a 
 Higher intensity of the stimulus leads to a choice of rather disengaging strategies, like distraction [@Sheppes2011;@Sheppes2014].
 Further influencing factors are for example extrinsic motivation (e.g. monetary incentives), motivational determinants (i.e. hedonic regulatory goals), and effort [@Sheppes2014;@Scheffel2021].
 Especially for effort, in our previous work we could show that the choice for an ER strategy is mainly influenced by effort [@Scheffel2021].
-
 In this study, participants used the strategies distancing and suppression while inspecting emotional pictures.
 Afterwards they could choose, which strategy they want to use again.
 Participants tended to re-apply the strategy that was less effortful, even though it was not the most effective one - in this case: Suppression.
 Interestingly, the choice was independent of self reported habitual use of suppression and reappraisal.
-
-
-However, what has been missing in research on ER choice so far is information regarding the strategy *not* chosen.
+What has been missing in research on ER choice so far is information regarding the strategy *not* chosen.
 People choose a strategy that they prefer, for different, relatively well-known reasons. 
 However, nothing is revealed about the strategy that is not chosen.
-It is possible that the chosen strategy represents the clear preference of an individual, while the strategy that was not chosen is not a realistic option for them. 
-On the other hand, it could also be that two strategies available for selection could represent almost equivalent options for the individual.
+
+We assume that people choose the strategy that has the highest value for them at that moment.
+The value is determined against the background of goal achievement in the specific situation: a strategy is valued high if it facilitates goal achievement [@Aldao2015]. 
+One certainly central goal is the regulation of negative affect.
+A second, intrinsic and rather less obvious goal is the avoidance of effort [@Inzlicht2018].
+When given the choice, most individuals prefer tasks that are less effortful [@Hull1943].
+We assume that both aspects are intercomputed by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal and is less effortful.
+SVs of ER Strategies could be helpful to describe the ER repertoire [@Aldao2015] more comprehensively.
+Depending on the flexibility of a person, different patterns of SVs could be conceivable: A person with high flexibility would show relatively high SVs for a number of strategies.
+This would mean that all strategies are a good option for goal achievement.
+A second person with less flexibilty, however, would show high SVs only for one strategy, or for no strategy at all.
+This in turn would mean that no strategy is a good choice to achieve goals.
+
+However, so far we have not seen any attempt in ER choice research to determine individual SVs of ER strategies.
 To investigate this question, the individual subjective values of each strategy available for selection would have to be determined.
 Promising approaches can be found in studies on difficulty levels of effortful cognitive tasks.  
 Individual subjective values (SV) of effortful cognitive tasks have been quantified using the cognitive effort discounting paradigm (COG-ED) [@Westbrook2013]. 
