--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -349,6 +349,21 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6172040/pdf/nihms-989921.pdf},
    year = {2018}
 }
 
+@article{Kable2007,
+   author = {Kable, J. W. and Glimcher, P. W.},
+   title = {The neural correlates of subjective value during intertemporal choice},
+   journal = {Nat Neurosci},
+   volume = {10},
+   number = {12},
+   pages = {1625-33},
+   ISSN = {1097-6256 (Print)
+1097-6256 (Linking)},
+   DOI = {10.1038/nn2007},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/17982449
+https://www.nature.com/articles/nn2007.pdf},
+   year = {2007}
+}
+
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
    author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B.
