--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -40,7 +40,8 @@ Similar to other psychological domains, e.g., attention and goal pursuit, *malad
 First, adaptive flexible ER requires having a large repertoire of ER strategies [@Aldao2015]. 
 For example, greater ER variability is related to reduced negative affect and therefore beneficial in daily life [@Blanke2020].
 Second, strategies have to be chosen from the repertoire that are useful for goal achieving.
-This selection of strategies is influenced by numerous factors.
+Evidence from other contexts (e.g., intertemporal choice, [@Kable2007]) shows that subjective values (SVs) are attributed to the choice options on the basis of which the decision is made.
+Research on ER choice has identified numerous factors that influence the choice of ER strategies, which can be seen as indirect evidence for factors influencing SVs. 
 For example, it was shown that the intensity of a stimulus or situation plays a role in the choice [@Sheppes2011]. 
 Higher intensity of the stimulus leads to a choice of rather disengaging strategies, like distraction [@Sheppes2011;@Sheppes2014].
 Further influencing factors are for example extrinsic motivation (e.g. monetary incentives), motivational determinants (i.e. hedonic regulatory goals), and effort [@Sheppes2014;@Scheffel2021].
@@ -89,7 +90,7 @@ The SV of each strategy is calculated as the mean of this strategy's SV from all
 In case a participant has a clear preference for one strategy, the SV of this strategy will be 1.
 But our paradigm can also account for the case that a person does not have a clear preference.
 Then no SV will be 1, but still, the SVs of all strategies can be interpreted as absolute values and in relation to the other strategy's SVs (see figure 1).
-### Hier sollte auch noch erwähnt werden, dass wir auch n-back erheben
+Additionally, We will test our adapted paradigm in a *n*-back task and explore whether this paradigm can describe individuals that do not prefer the easiest *n*-back option (see Zerna et al., ...).
 ```{r fig1, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm."}
 include_graphics(here("99_Thinktank","other","Paradigm_Scheme_T2.png" ))
 ```
